--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "http-proxy" : "0.10",
     "follow" : "0.10",
     "request-json" : "0.4",
+    "request" : "2",
+    "async" : "0.2",
     "docstate" : "0.0.2"
   },
   "jshintConfig" : {}
